--- a/packedgo/front-angular/src/app/features/auth/customer-login/customer-login.component.html
+++ b/packedgo/front-angular/src/app/features/auth/customer-login/customer-login.component.html
@@ -9,8 +9,8 @@
   </button>
 
   <div class="text-center mb-4">
-    <div class="logo-container">
-      <i class="bi bi-ticket-perforated-fill"></i>
+    <div class="logo-container mb-3">
+      <img src="images/logo-packedgo.svg" alt="PackedGo Logo" class="logo-main">
     </div>
     <h2 class="title">Login Cliente</h2>
     <p class="subtitle">Accede a tus eventos y tickets</p>
