--- a/packedgo/front-angular/src/app/features/employee/employee-dashboard/employee-dashboard.component.html
+++ b/packedgo/front-angular/src/app/features/employee/employee-dashboard/employee-dashboard.component.html
@@ -3,7 +3,7 @@
   <header class="dashboard-header">
     <div class="header-content">
       <div class="header-left">
-        <i class="bi bi-person-badge-fill"></i>
+        <img src="images/logo-icon.svg" alt="PackedGo" class="header-logo">
         <div class="header-info">
           <h1>Panel de Empleado</h1>
           <p class="employee-name">{{ employeeName }}</p>
