--- a/packedgo/front-angular/src/app/features/landing/landing.component.html
+++ b/packedgo/front-angular/src/app/features/landing/landing.component.html
@@ -3,7 +3,8 @@
   <nav class="navbar">
     <div class="container">
       <div class="navbar-brand">
-        <span class="logo">📅 PackedGo</span>
+        <img src="images/logo-icon.svg" alt="PackedGo" class="logo-icon">
+        <span class="logo">PackedGo</span>
       </div>
       <div class="navbar-menu">
         <a class="nav-link" (click)="scrollToSection('features')">Características</a>
